# two-tower-recsys-retrieval

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
configs/: infer.yaml  train.yaml
configs/data/: movielens20m.yaml
configs/export/: onnx.yaml
configs/logging/: mlflow.yaml
configs/model/: two_tower.yaml
configs/trainer/: default.yaml
data/raw/: ml-20m.zip.dvc
two_tower_recsys/data/: datamodule.py  datasets.py  download.py  preprocess.py
two_tower_recsys/eval/: metrics.py
two_tower_recsys/models/: lightning_module.py  two_tower.py
two_tower_recsys/pipelines/: export_onnx_pipeline.py  infer_pipeline.py  package_mlflow_pipeline.py  train_pipeline.py
two_tower_recsys/prod/: export_onnx.py  mlflow_pyfunc.py
two_tower_recsys/utils/: git.py  metrics_history.py  plotting.py
